fix: Included the 'copied' popup syntax in the code sample

--- a/libs/jade/modules/toolbar.jade
+++ b/libs/jade/modules/toolbar.jade
@@ -60,6 +60,6 @@ block content
 				|         &lt;a class="a-social-facebook" data-track="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" rel="external"&gt;Facebook&lt;/a&gt;
 				|         &lt;a class="a-social-whatsapp show-mobile" href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);"&gt;Whatsapp&lt;/a&gt;
 				|         &lt;a class="a-social-email" data-track="Email page" href="javascript:emailCurrentPage()"&gt;Email&lt;/a&gt;
-				|         &lt;a class="a-social-copy"&gt;Copy link&lt;/a&gt;
+				|         &lt;a class="a-social-copy"&gt;Copy link&lt;div class="copied"&gt;Copied!&lt;/div&gt;&lt;/a&gt;
 				|     &lt;/div&gt;
 				| &lt;/div&gt;
