--- a/libs/jade/dev/adviser-2/contractual-sick-pay.jade
+++ b/libs/jade/dev/adviser-2/contractual-sick-pay.jade
@@ -3,6 +3,7 @@ block settings
 	- var sidebar = true
 	- var mockup = true
 	- var toolbars = true
+	- var sharebar = true
 	- var newfoot = true
 	- var dir = "../../"
 
