--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -94,30 +94,19 @@
 
 	// Styles for collapsible sidebar on mobile
     &__heading {
-    	display: none;
+    	//display: none;
     	padding: 0;
     	margin: 0;
-        cursor: pointer;
 		a {
 			display: block;
 			padding: @box-spacing-horizontal*.75;
-			font-size: @font-size-h4*1.25;
+			font-size: @font-size-h4;
 			margin: 0;
 			border-bottom: none;
-			color: @heritage-blue;
+			color: @gray-2;
 			font-weight: @font-weight-bold;
-			background-color: @heritage-yellow-lighter;
-			cursor: pointer;
 			border-bottom: 0;
-            .btn-icon(@i-plus,@color:@heritage-blue);
-            .expanded & {
-                .btn-icon(@i-minus,@color:@heritage-blue);
-            }
-            &:hover,
-            &:active,
-            &:visited {
-            	background-color: @heritage-yellow-lighter;
-            }
+			cursor: default;
 		}
     }
 
@@ -129,6 +118,22 @@
         margin-bottom: 1.5rem;
 	    &__heading {
 	    	display: block;
+			background-color: @heritage-yellow-lighter;
+			cursor: pointer;
+            .btn-icon(@i-plus,@color:@heritage-blue);
+            .expanded & {
+                .btn-icon(@i-minus,@color:@heritage-blue);
+            }
+            &:hover,
+            &:active,
+            &:visited {
+            	background-color: @heritage-yellow-lighter;
+            }
+			a {
+				font-size: @font-size-h4*1.25;
+				color: @heritage-blue;
+				cursor: pointer;
+			}
 	    }
         &__heading + ul {
             display: block;
