fix: Darkened link hovers in adviser only boxes to make them more obvious

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -36,6 +36,9 @@ span[id*="overlay_button"] {
         color: @white;
         padding: .3em .5em;
     }
+    a:hover {
+        background-color: @inventive-teal-lightest;
+    }
 }
 
 .section-nav .adviser-nav {
