change/fix: Changed the 'copy link' a to a button This is much better for accessibility and syntax, while also solving tab navigation issues. Unfortunately it involved a lot of CSS to make it look like a link rather than a button.

--- a/libs/jade/modules/toolbar.jade
+++ b/libs/jade/modules/toolbar.jade
@@ -39,7 +39,7 @@ block content
 				a.a-social-whatsapp.show-mobile(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
 				//button.toolbar-button.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 				a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
-				a.a-social-copy Copy link
+				button.a-social-copy Copy link
 					.copied Copied!
 		pre
 			code.language-html
@@ -60,6 +60,6 @@ block content
 				|         &lt;a class="a-social-facebook" data-track="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" rel="external"&gt;Facebook&lt;/a&gt;
 				|         &lt;a class="a-social-whatsapp show-mobile" href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);"&gt;Whatsapp&lt;/a&gt;
 				|         &lt;a class="a-social-email" data-track="Email page" href="javascript:emailCurrentPage()"&gt;Email&lt;/a&gt;
-				|         &lt;a class="a-social-copy"&gt;Copy link&lt;div class="copied"&gt;Copied!&lt;/div&gt;&lt;/a&gt;
+				|         &lt;button class="a-social-copy"&gt;Copy link&lt;div class="copied"&gt;Copied!&lt;/div&gt;&lt;/button&gt;
 				|     &lt;/div&gt;
 				| &lt;/div&gt;
