--- a/libs/template/sharebar.jade
+++ b/libs/template/sharebar.jade
@@ -6,5 +6,5 @@
 	a.a-social-whatsapp.show-mobile(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
 	//button.toolbar-button.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 	a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
-	a.a-social-copy Copy link
+	button.a-social-copy Copy link
 		.copied Copied!
