--- a/libs/modules/share-bar.less
+++ b/libs/modules/share-bar.less
@@ -5,8 +5,27 @@
  */
 
 // Styles for the 'copied' notification on copy link
-.a-social-copy {
+.a-social-copy,
+.a-social-copy:hover,
+.a-social-copy:active,
+.a-social-copy:focus {
     position: relative;
+    padding: .25rem;
+    border: none;
+    font-size: 1rem;
+    font-weight: @font-weight-base;
+    font-size: 0.875rem;
+    background: none;
+    border-radius: 0;
+    margin: 0;
+    color: @link-color;
+    line-height: 2rem;
+}
+
+.a-social-copy:hover,
+.a-social-copy:active,
+.a-social-copy:focus {
+    background-color: lighten(@link-color, 75%);
 }
 
 .a-social-copy .copied {
@@ -15,7 +34,7 @@
     color: @white;
     padding: .25rem .75rem;
     position: absolute;
-    top: -2.5rem;
+    top: -2.65rem;
     left: 50%;
     border-radius: 2px;
     margin-left: -2.2rem;
