fix: Added fixed width to search bar in new nav
This solved issues caused when resizing, which occassionally caused the search bar to not appear, or the links to run under the logo

--- a/libs/modules/main-nav-beta.less
+++ b/libs/modules/main-nav-beta.less
@@ -59,7 +59,7 @@
 				padding-right: 1rem;
 			}
 			@media screen and (min-width: @breakpoint-sm) {
-				padding-left: 220px;
+				padding-left: 240px;
 			}
 		}
 		.logo,
@@ -159,6 +159,10 @@
 			margin: .25rem 0;
 			float: right;
 			display: none;
+			width: 14rem;
+			@media screen and (min-width: @breakpoint-lg) {
+				width: 21rem;
+			}
 			@media screen and (min-width: @breakpoint-md) {
 				display: inline-block;
 			}
