--- a/libs/jade/dev/site/navigation.jade
+++ b/libs/jade/dev/site/navigation.jade
@@ -10,100 +10,112 @@ extends /template/template-site.jade
 		{title: "Home", href: dir + "index.html"}])
 
 block content
-	.fullwidth-content
-		.flex-container.flex-row(style="padding-top: 2rem;")
-			.col-sm-12.col-xs-12
-				.title
-					h1.title__heading.js-ref
-						span.title__title Browse or search for information
-				.field-group.field-group--buttons
-					input#field(type="search", placeholder="Search")
-					button.btn
-						i.icon-search
+	//.fullwidth-content
+		.title
+			h1.title__heading.js-ref
+				span.title__title Browse or search for information
+		.field-group.field-group--buttons
+			input#field(type="search", placeholder="Search")
+			button.btn
+				i.icon-search
 
-		.flex-container.flex-row(style="padding-top: 2rem;")
-			.col-sm-12.col-xs-12
-					h2 Get advice 
-		.flex-container.flex-row
-			.col-sm-4.col-xs-12
+	.fullwidth
+		.fullwidth-content
+			h2#GetAdvice Get advice
+			ul.navigation-list
+				li
 					h3 #[a(href="#") Benefits]
 					p Benefit eligibility and calculators. Applying and problems with applications.
 
+				li
 					h3 #[a(href="#") Work]
 					p Rights at work, workplace discrimination, self-employment, rules and regulations of work.
-					
+
+				li
 					h3 #[a(href="#") Debt and money]
 					p Dealing with debts and arrears, budgeting, mortgages and pension services.
-					
+
+				li
 					h3 #[a(href="#") Consumer]
 					p The law and your rights when purchasing goods and services.
-					
-			.col-sm-4.col-xs-12
+
+				li
 					h3 #[a(href="#") Relationship]
 					p Marriage, divorce, partnerships and looking after people. Births, deaths and wills.
-					
+
+				li
 					h3 #[a(href="#") Housing]
 					p Renting or buying a house, tenancy agreements and your rights as a homeowner or tenant.
-					
+
+				li
 					h3 #[a(href="#") Law and rights]
 					p Legal and civil rights, policing, the prison system and witness services.
-					
+
+				li
 					h3 #[a(href="#") Discrimination]
 					p Types of discrimination, steps to take if you have been discriminated against.
-					
-			.col-sm-4.col-xs-12
+
+				li
 					h3 #[a(href="#") Tax]
 					p Taxable income, payments, refunds and problems. Council, pensioners and inheritance tax.
-					
+
+				li
 					h3 #[a(href="#") Healthcare]
 					p Help with NHS and dental. Private, alternative and armed forces healthcare.
-					
+
+				li
 					h3 #[a(href="#") Education]
 					p School and higher education, support for learning, discrimination and financial advice.
 
-	//.fullwidth-yellow
-	.fullwidth-content
-		.flex-container.flex-row(style="padding-top: 2rem;")
-			.col-sm-12.col-xs-12
-					h2 Get involved 
-		.flex-container.flex-row
-			.col-sm-4.col-xs-12
-				h3 #[a(href="#") About Citizens Advice]
-				p Who we are, the history, our mission and corporate information including annual reports.
+	.fullwidth-yellow
+		.fullwidth-content
+			h2#GetInvolved Get involved
+			ul.navigation-list
+				li
+					h3 #[a(href="#") About Citizens Advice]
+					p Who we are, the history, our mission and corporate information including annual reports.
 
-				h3 #[a(href="#") How Citizens Advice works]
-				p What advice we give, how we record data and how it's used. 
-				
-				h3 #[a(href="#") Contact us]
-				p There are various ways to contact us for advice and give feedback on Citizens Advice.
-				
-				h3 #[a(href="#") Our blogs]
-				p All the blogs from Citizens Advice.
-				
-			.col-sm-4.col-xs-12
-				// This is formerly Policy Research
-				h3 #[a(href="#") Policy]
-				p Research giving insights and reports on the effectiveness of policy.
+				li
+					h3 #[a(href="#") How Citizens Advice works]
+					p What advice we give, how we record data and how it's used.
 
-				h3 #[a(href="#") Jobs]
-				p Find out about working in the Citizens Advice network and search jobs.
-				
-				h3 #[a(href="#") Press releases]
-				p Searching press releases, media centre and contacting the news team.
-				
-				h3 #[a(href="#") The difference we make]
-				p Reports and information on how Citizens Advice has helped and social trends.
-				
-			.col-sm-4.col-xs-12
+				li
+					h3 #[a(href="#") Contact us]
+					p There are various ways to contact us for advice and give feedback on Citizens Advice.
 
-				h3 #[a(href="#") Campaigns]
-				p Our latest campaign, how to sign up and support.
-				
-				h3 #[a(href="#") Volunteer]
-				p Become a volunteer, find out how you can make a difference to people.
+				li
+					h3 #[a(href="#") Our blogs]
+					p All the blogs from Citizens Advice.
 
-				h3 #[a(href="#") Support us]
-				p We are a charity, find out how to support us.
+					// This is formerly Policy Research
+				li
+					h3 #[a(href="#") Policy]
+					p Research giving insights and reports on the effectiveness of policy.
 
-				h3 #[a(href="#") Find your local Citizens Advice]
-				p For more information and getting advice from your local Citizens Advice.
+				li
+					h3 #[a(href="#") Jobs]
+					p Find out about working in the Citizens Advice network and search jobs.
+
+				li
+					h3 #[a(href="#") Press releases]
+					p Searching press releases, media centre and contacting the news team.
+
+				li
+					h3 #[a(href="#") The difference we make]
+					p Reports and information on how Citizens Advice has helped and social trends.
+
+				li
+					h3 #[a(href="#") Campaigns]
+					p Our latest campaign, how to sign up and support.
+
+				li
+					h3 #[a(href="#") Volunteer]
+					p Become a volunteer, find out how you can make a difference to people.
+
+				li
+					h3 #[a(href="#") Support us]
+					p We are a charity, find out how to support us.
+
+				li
+					h3 #[a(href="#") Find your local Citizens Advice]
+					p For more information and getting advice from your local Citizens Advice.
