--- a/libs/modules/main-nav-beta.less
+++ b/libs/modules/main-nav-beta.less
@@ -254,3 +254,31 @@
         }
     }
 }
+
+.navigation-list {
+    list-style: none;
+    padding-left: 0;
+    width: 100%;
+    column-count: 3;
+    column-gap: 4rem;
+    margin: 0;
+    margin-top: 2rem;
+    li {
+        break-inside: avoid-column;
+        display: inline-block;
+        width: 100%;
+        h3 {
+        	margin-top: 0;
+        }
+        a {
+            font-weight: bold;
+        }
+    }
+    @media screen and (max-width: @screen-sm-max) {
+        column-count: 2;
+    }
+    @media screen and (max-width: @screen-xs-max) {
+        column-gap: 2rem;
+        column-count: 1;
+    }
+}
