fix: Added inline-block to toolbar items to prevent labels from wrapping without their icons

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -199,6 +199,7 @@
 .info-reviewed {
     border-bottom: 0;
     margin-right: .9em;
+    display: inline-block;
     &:before {
         content: @i-clock;
         color: @blue-light;
@@ -208,6 +209,7 @@
 .info-owner {
     border-bottom: 0;
     margin-right: .9em;
+    display: inline-block;
     &:before {
         content: @i-happy;
         color: @blue-light;
@@ -217,6 +219,7 @@
 .info-extent {
     border-bottom: 0;
     margin-right: .9em;
+    display: inline-block;
     &:before {
         content: @i-target;
         color: @blue-light;
