--- a/libs/modules/dialog.less
+++ b/libs/modules/dialog.less
@@ -15,6 +15,7 @@
 	left: 0;
     background: url("assets/images/1x1-000000-0.8.png"); // Old IE
 	background: rgba( 0,0,0,.8);
+	z-index: 1;
 }
 
 .dialog {
