--- a/libs/jade/modules/extent.jade
+++ b/libs/jade/modules/extent.jade
@@ -1,7 +1,7 @@
 block settings
 	- var title = "Extent switcher"
 	- var sidebar = true
-	- var toolbars = true
+	- var toolbars = false
 	- var dir = "../"
 
 extends /template/template.jade
@@ -10,99 +10,84 @@ block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: dir + "index.html"},
 		{title: "Modules", href: dir + "index.html#Modules"},
-		{title: "Modals", href: dir + "index.html#modals"},
 		{title: "Extent switcher"}])
 
 block sidebar
 	include /template/sidebar-modules.jade
 
-block content
-	.dialog__mask(style="z-index: 2;")
-
-
-		.dialog.dialog--simple.dialog--extent-picker(role="alertdialog" aria-labelledby="dialog-1-label" aria-describedby="dialog-1-main" tabindex="-1" style="z-index: 3;")
-
-			header.dialog__header
-				h2#dialog-1-label.dialog__title Where in the UK do you live?
-				button.dialog__close(type="button" data-action="close")<i aria-hidden="true" class="dialog__close-icon"></i><span class="dialog__close-text">Close</span>
-
-			.dialog__main#dialog-1-main
-				div(type="Sigma.CitizensAdvice.Web.Models.Pages.StartPage")
-					p The law can vary in different parts of the UK.
-					ul.extent-selection
-						li
-							a.btn.btn-small(href="?lang=en-GB") England
-
-						li
-							a.btn.btn-small(href="?lang=en-NIR") Northern Ireland
-
-						li
-							a.btn.btn-small(href="?lang=en-SCT") Scotland
-
-						li
-							a.btn.btn-small(href="?lang=en-WLS") Wales
-			footer.dialog__footer
-
-		//.dialog.dialog--simple.dialog--extent-picker(aria-describedby="dialog-1-main", aria-labelledby="dialog-1-label", role="alertdialog", style="z-index: 3;", tabindex="-1")
-			header.dialog__header
-				button.dialog__close(data-action="close", type="button")
-					i(aria-hidden="true", class="dialog__close-icon")
-					span.dialog__close-text Close
-			.dialog__main#dialog-1-main
-				div
-					h2.dialog__title Where in the UK do you live?
-					p The law can vary in different parts of the UK.
-				ul.extent-selection
-					li
-						a.btn.btn-small(href="?lang=en-GB") England
-					li
-						a.btn.btn-small(href="?lang=en-NIR") Northern Ireland
-					li
-						a.btn.btn-small(href="?lang=en-SCT") Scotland
-					li
-						a.btn.btn-small(href="?lang=en-WLS") Wales
-			footer.dialog__footer
-
-
-		//.dialog.dialog--extent-picker(aria-describedby="dialog-1-main", aria-labelledby="dialog-1-label", role="alertdialog", style="z-index: 3;", tabindex="-1")
-			header.dialog__header
-				h2.dialog__title#dialog-1-label Where in the UK do you live?
-				button.dialog__close(data-action="close", type="button")
-					i.dialog__close-icon(aria-hidden="true")
-					span.dialog__close-text Close
-
-			div.dialog__main#dialog-1-main
-				div
-					p The law can vary in different parts of the UK.
-
-				ul.extent-selection
-					li
-						a.btn.btn-small(href="?lang=en-GB") England
-					li
-						a.btn.btn-small(href="?lang=en-NIR") Northern Ireland
-					li
-						a.btn.btn-small(href="?lang=en-SCT") Scotland
-					li
-						a.btn.btn-small(href="?lang=en-WLS") Wales
-					li
-						a.btn.btn-small(href="?lang=cy") Cymru
-
-			footer.dialog__footer
-
-	//script.
+block script
+	script.
 		$(document).ready(function(){
 			$("#showSimpleModal").click(function() {
-				$("div#simpleModal").addClass("show");
-				return false;
+				$(".dialog__mask").show();
 			});
-			$("#closeSimple").click(function() {
-				$("div#simpleModal").removeClass("show");
-				return false;
+			$(".dialog__close").click(function() {
+				$(".dialog__mask").hide();
+			});
+			//close modal when clicking the esc keyboard button
+			$(document).keyup(function(event){
+				if(event.which=='27'){
+					$(".dialog__mask").hide();
+				}
 			});
 		});
-		//close modal when clicking the esc keyboard button
-		$(document).keyup(function(event){
-			if(event.which=='27'){
-				$("div#simpleModal").removeClass('show');
-			}
-		});
+
+block content
+	.example-box-plain
+		.title__subheading
+			| This advice is for
+			button#showSimpleModal.btn-secondary.btn-small(type="button")
+				span.screenreader This advice is for
+				| England
+
+		.dialog__mask
+			.dialog.dialog--simple.dialog--extent-picker(role="alertdialog" aria-labelledby="dialog-1-label" aria-describedby="dialog-1-main" tabindex="-1" style="z-index: 3;")
+
+				header.dialog__header
+					h2#dialog-1-label.dialog__title Where in the UK do you live?
+					button.dialog__close(type="button" data-action="close")
+						i.dialog__close-icon(aria-hidden="true")
+						span.dialog__close-text Close
+
+				.dialog__main#dialog-1-main
+					div(type="Sigma.CitizensAdvice.Web.Models.Pages.StartPage")
+						p The law can vary in different parts of the UK.
+						ul.extent-selection
+							li
+								a.btn.btn-small(href="?lang=en-GB") England
+
+							li
+								a.btn.btn-small(href="?lang=en-NIR") Northern Ireland
+
+							li
+								a.btn.btn-small(href="?lang=en-SCT") Scotland
+
+							li
+								a.btn.btn-small(href="?lang=en-WLS") Wales
+				footer.dialog__footer
+
+	pre
+		code.language-html
+			| &lt;div class="dialog__mask"&gt;
+			| 	&lt;div role="alertdialog" aria-labelledby="dialog-1-label" aria-describedby="dialog-1-main" tabindex="-1" class="dialog dialog--simple dialog--extent-picker"&gt;
+			| 		&lt;header class="dialog__header"&gt;
+			| 			&lt;h2 id="dialog-1-label" class="dialog__title"&gt;Where in the UK do you live?&lt;/h2&gt;
+			| 			&lt;button type="button" data-action="close" class="dialog__close"&gt;
+			| 				&lt;i aria-hidden="true" class="dialog__close-icon"&gt;&lt;/i&gt;
+			| 				&lt;span class="dialog__close-text"&gt;Close&lt;/span&gt;
+			| 			&lt;/button&gt;
+			| 		&lt;/header&gt;
+			| 		&lt;div id="dialog-1-main" class="dialog__main"&gt;
+			| 			&lt;div type="Sigma.CitizensAdvice.Web.Models.Pages.StartPage"&gt;
+			| 				&lt;p&gt;The law can vary in different parts of the UK.&lt;/p&gt;
+			| 				&lt;ul class="extent-selection"&gt;
+			| 					&lt;li&gt;&lt;a href="?lang=en-GB" class="btn btn-small"&gt;England&lt;/a&gt;&lt;/li&gt;
+			| 					&lt;li&gt;&lt;a href="?lang=en-NIR" class="btn btn-small"&gt;Northern Ireland&lt;/a&gt;&lt;/li&gt;
+			| 					&lt;li&gt;&lt;a href="?lang=en-SCT" class="btn btn-small"&gt;Scotland&lt;/a&gt;&lt;/li&gt;
+			| 					&lt;li&gt;&lt;a href="?lang=en-WLS" class="btn btn-small"&gt;Wales&lt;/a&gt;&lt;/li&gt;
+			| 				&lt;/ul&gt;
+			| 			&lt;/div&gt;
+			| 		&lt;/div&gt;
+			| 		&lt;footer class="dialog__footer"&gt;&lt;/footer&gt;
+			| 	&lt;/div&gt;
+			| &lt;/div&gt;
