dev: Made Adviser notice sticky

--- a/libs/jade/dev/adviser-2/contractual-sick-pay.jade
+++ b/libs/jade/dev/adviser-2/contractual-sick-pay.jade
@@ -16,12 +16,12 @@ block breadcrumbs
 		{title: "Content toolbar"}])
 
 block section-notice
-	aside.section-notice__adviser
+	aside.section-notice__adviser.js-make-sticky
 		h2.screenreader Notice
 		.section-notice__content
 			p
 				span.badge ADVISER
-				| This page is part of #[a(href="#") adviser only] content.
+				| This page is part of adviser only content.
 
 block sidebar
 	include /template/sidebar-adviser.jade
