--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -195,38 +195,39 @@ html.no-js
 						h2 This section is print only
 
 		#footer.main-footer(data-track-zone="footer")
-			.footer-content.flex-row
-				.flex-column.col-xs-12.col-md-9
-					h3 Get Advice
-					.flex-row(style="padding: 0;")
-						.col-xs-12.col-sm-4
-							ul
-								li #[a(href="#") Benefits]
-								li #[a(href="#") Work]
-								li #[a(href="#") Debt and money]
-								li #[a(href="#") Consumer]
+			if !nofooter
+				.footer-content.flex-row
+					.flex-column.col-xs-12.col-md-9
+						h3 Get Advice
+						.flex-row(style="padding: 0;")
+							.col-xs-12.col-sm-4
+								ul
+									li #[a(href="#") Benefits]
+									li #[a(href="#") Work]
+									li #[a(href="#") Debt and money]
+									li #[a(href="#") Consumer]
 
-						.col-xs-12.col-sm-4
-							ul
-								li #[a(href="#") Relationships]
-								li #[a(href="#") Housing]
-								li #[a(href="#") Law and rights]
-								li #[a(href="#") Discrimination]
+							.col-xs-12.col-sm-4
+								ul
+									li #[a(href="#") Relationships]
+									li #[a(href="#") Housing]
+									li #[a(href="#") Law and rights]
+									li #[a(href="#") Discrimination]
 
-						.col-xs-12.col-sm-4
-							ul
-								li #[a(href="#") Tax]
-								li #[a(href="#") Healthcare]
-								li #[a(href="#") Education]
-								li #[a(href="#") A to Z of advice]
+							.col-xs-12.col-sm-4
+								ul
+									li #[a(href="#") Tax]
+									li #[a(href="#") Healthcare]
+									li #[a(href="#") Education]
+									li #[a(href="#") A to Z of advice]
 
-				.flex-column.col-xs-12.col-md-3
-					h3 Information
-					ul
-						li #[a(href="#") Help]
-						li #[a(href="#") Cymraeg]
-						li #[a(href="#") Terms and conditions]
-						li #[a(href="#") Privacy and cookies]
+					.flex-column.col-xs-12.col-md-3
+						h3 Information
+						ul
+							li #[a(href="#") Help]
+							li #[a(href="#") Cymraeg]
+							li #[a(href="#") Terms and conditions]
+							li #[a(href="#") Privacy and cookies]
 
 			.footer--legal
 				.footer--legal--content
