--- a/libs/modules/savebar.less
+++ b/libs/modules/savebar.less
@@ -75,7 +75,7 @@
 		display: inline-block;
 	}
 	@media (min-width: 600px) {
-		display: none;
+		//display: none;
 	}
 	&.saved {
 		display: inline-block;
