dev: Playing with colour adjustments of the header

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -85,6 +85,20 @@
 @adviser-blue-gray:         #5D7678;
 @adviser-stone:             #ACAA9B;
 
+/*
+@intranet:					@responsible-purple;
+@intranet-alt:				@responsible-aqua;
+@intranet-light:      		lighten(@intranet, 5%);
+@intranet-lighter:    		lighten(@intranet, 40%);
+@intranet-lightest:   		lighten(@intranet, 50%);
+*/
+
+@intranet:					@inventive-teal;
+@intranet-alt:				@inventive-pink;
+@intranet-light:      		lighten(@intranet, 5%);
+@intranet-lighter:    		@inventive-teal-lighter;
+@intranet-lightest:   		@inventive-teal-lightest;
+
 /***************************************************************************
  * NAVIGATION COLOURS
  */
