change: Experimenting with intranet colours in the footer

--- a/libs/modules/footer.less
+++ b/libs/modules/footer.less
@@ -5,7 +5,7 @@
  */
 
 .main-footer {
-    background-color: @heritage-blue-lightest;
+    background-color: @intranet-lightest;
     .black-text;
     overflow: hidden; // Prevent collapsing margins
 
