change: Changed top nav to have three menus

--- a/libs/modules/main-nav-beta.less
+++ b/libs/modules/main-nav-beta.less
@@ -191,8 +191,9 @@
 }
 
 #main-nav-beta--search,
-#main-nav-beta--advice,
-#main-nav-beta--involved {
+#main-nav-beta--news,
+#main-nav-beta--job,
+#main-nav-beta--org {
 	display: none;
 }
 
@@ -225,8 +226,9 @@
 	}
 }
 
-#main-nav-beta--advice,
-#main-nav-beta--involved {
+#main-nav-beta--news,
+#main-nav-beta--job,
+#main-nav-beta--org {
     background-color: @intranet-lightest;
     .content {
         max-width: @breakpoint-lg;
