dev: Nav changes

--- a/libs/jade/dev/site/topic.jade
+++ b/libs/jade/dev/site/topic.jade
@@ -23,33 +23,33 @@ block content
 			.col-md-8.col-sm-12
 				.contents-page__section
 					h2 Before you claim PIP
-					p #[a(href="#") Check if you’re eligible for PIP]
-					p #[a(href="#") PIP: presence, residence and length of condition rules]
-					p #[a(href="#") How much PIP you can get and for how long]
-					p #[a(href="#") Extra money and help PIP entitles you to]
-					p #[a(href="#") Moving from DLA to PIP]
+					p #[a Check if you’re eligible for PIP]
+					p #[a PIP: presence, residence and length of condition rules]
+					p #[a How much PIP you can get and for how long]
+					p #[a Extra money and help PIP entitles you to]
+					p #[a Moving from DLA to PIP]
 
 				.contents-page__section
 					h2 Help with your PIP claim
-					p #[a(href="#") How to claim PIP]
-					p #[a(href="#") How to claim PIP if you have a terminal illness]
-					p #[a(href="#") Help filling in your PIP claim form]
-					p #[a(href="#") Getting evidence to support your PIP claim]
-					p #[a(href="#") Sending your PIP claim form]
-					p #[a(href="#") Preparing for your PIP assessment]
-					p #[a(href="#") Changes that affect your PIP]
+					p #[a How to claim PIP]
+					p #[a How to claim PIP if you have a terminal illness]
+					p #[a(href="content.html") Help filling in your PIP claim form]
+					p #[a Getting evidence to support your PIP claim]
+					p #[a Sending your PIP claim form]
+					p #[a Preparing for your PIP assessment]
+					p #[a Changes that affect your PIP]
 
 				.contents-page__section
 					h2 PIP appeals
-					p #[a(href="#") Challenging a PIP decision - mandatory reconsideration]
-					p #[a(href="#") Challenging a PIP decision - apply for a tribunal hearing]
-					p #[a(href="#") Challenging a PIP decision - the tribunal hearing]
-					p #[a(href="#") How the DWP makes a decision on PIP claims]
+					p #[a Challenging a PIP decision - mandatory reconsideration]
+					p #[a Challenging a PIP decision - apply for a tribunal hearing]
+					p #[a Challenging a PIP decision - the tribunal hearing]
+					p #[a How the DWP makes a decision on PIP claims]
 				.contents-page__section
 					h2 PIP resources
-					p #[a(href="#") PIP resources for advisers]
-					p #[a(href="#") Letter to confirm the DWP has given you more time to send your PIP claim form]
-					p #[a(href="#") Letter to send evidence after your PIP claim form]
+					p #[a PIP resources for advisers]
+					p #[a Letter to confirm the DWP has given you more time to send your PIP claim form]
+					p #[a Letter to send evidence after your PIP claim form]
 
 			.col-md-4.col-sm-12
 				div.blog-sidebar--updates(style="background-color:#a6d6ae;")
