--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -47,12 +47,16 @@ html.no-js
 			.branding
 				.content
 					ul
-						li
+						//li
 							a.icon-local(href="locator.html") Find a local Citizens Advice
 						li(href="#")
+							a.icon-local Public site
+						//li(href="#")
 							a Cymraeg
 						li(href="#")
-							a Sign in
+							a Domenico Perri
+						li(href="#")
+							a Sign out
 			.navigation
 				.content
 					a.logo(href="#{dir}index.html")
