dev: Changing nav items

--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -66,13 +66,13 @@ html.no-js
 					ul
 						li#org
 							a(href="#")
-								span Connect
+								span Staff
 						li#job
 							a(href="#")
-								span Work
+								span Service
 						li#news
 							a(href="#")
-								span Update
+								span Resources
 						li#search-toggle
 							a(href="#")
 								i.icon-search
