add: intranet homepage update

--- a/libs/jade/dev/site/home.jade
+++ b/libs/jade/dev/site/home.jade
@@ -3,60 +3,64 @@ block settings
 	- var fullpage = true
 	- var dir = "../../"
 	- var newfooter = true
+	- var nofooter = true
 
 extends /template/template-site.jade
 
 block content
 		.main-container
-		.home-first
-			.home__content
-				.flex-container.flex-row
-					.col-md-6.col-sm-12
-						h1 Welcome to Citizens Advice
-						p We provide free, independent, confidential and impartial advice to everyone on their rights and responsibilities. We value diversity, promote equality and challenge discrimination.
-						//.home__content-trends
-							h2 Most viewed 
-							p #[a(href="#") Employment Support Allowance ]
-							p #[a(href="#") Personal Independence Payment ]
-							p #[a(href="#") Basic rights at work ]
-							p #[a(href="#") Report to Trading Standards ]
-							p #[a(href="#") Consumer ]
-					.col-md-6.col-sm-12.hide-mobile.home--feature
-						img(src="../../images/sample-blog/man_on_phone.svg" alt="" style="width:100%;")
+			.home-first(style="background-color:#f2f8ff;")
+				.home__content
+					.flex-container.flex-row
+						.col-md-8.col-sm-12
+							.blog-lead
+								.blog-name
+									p Tuesday 13 June
+							h1 Hello Dom Dom Dom
+							p Welcome to the intranet, this is your site for the latest organisational information, news and tools to help you do your best work. If you have any feedback #[a(href="#") let us know].
+							//.home__content-trends
+								h2 Most viewed 
+								p #[a(href="#") Employment Support Allowance ]
+								p #[a(href="#") Personal Independence Payment ]
+								p #[a(href="#") Basic rights at work ]
+								p #[a(href="#") Report to Trading Standards ]
+								p #[a(href="#") Consumer ]
+						//.col-md-4.col-sm-12.blog-sidebar--updates(style="background-color:#f2f2f2; height:100%;")
+							.card-banner-top
+								p(style="color:#004b88;") Some heading
+							.card-text
+								p(style="color:#333;") Some content stuff.
 
 
 		.home-second
 			.home__content
 				.flex-container.flex-row
-					div.col-sm-4.col-sm-12								
-						.blog-lead
-							.blog-name
-								p Issues affecting people
-						.data-display
-							p.data-display-intro Problems at work
-							p We research issues affecting people everyday and lobby Government to change policy.
-							h3 380,000
-							p employment issues in 2015
-							h3 84%
-							p increase in unauthorised deduction from wages
-							p #[a(href="#") Read more about our research ]		
-
-					div.col-sm-4.col-sm-12
-						.blog-lead
-							.blog-name
-								p Latest Blog
-								h3 #[a(href="#") Payday loans: An improved market? ]
-							img(src="../../images/sample-blog/adviser-needs.jpg" alt="Blog image" style="width:100%;")
-							p Since the Financial Conduct Authority (FCA) took over the regulation of the consumer credit sector the payday loan market has undergone a wave of changes.
-
-					div.col-sm-4.col-sm-12.blog-sidebar--updates(style="background-color:#a6d6ae; height:100%;")
+					div.col-sm-12.col-sm-12
+						h2 Create your homepage								
+						p Click on the plus in the box below or when you visit one of the pages in the site, making it easier to go back to where you go regularly
+					.col-md-4.col-sm-12.blog-sidebar--updates(style="background-color:#B8E3DF; height:100%;")
 						.card-banner-top
-							p(style="color:#57486b;") Help others
+							p(style="color:#004b88;") Job Opportunities
 						.card-text
-							img(src="../../images/sample-blog/mugs-purple.svg" alt="volunteer" style="width:80%;")
-							p(style="color:#333;") Join one of over 300 local Citizens Advice, get training and help people.
-							fieldset
-								label(for="standardField", style="color:#57486b;") Search your area
-								input#standardField(placeholder="", type="text")
+							p(style="color:#333;") Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 
-							button.btn.btn-secondary.right-button-icon Search roles
+					.col-md-4.col-sm-12.blog-sidebar--updates(style="background-color:#f2f2f2; height:100%;")
+						.card-text(style="padding: 5.5rem; text-align: center;")
+							img(src="#{dir}images/intranet/plus.svg")
+
+
+					.col-md-4.col-sm-12.blog-sidebar--updates(style="background-color:#f2f2f2; height:100%;")
+						.card-text(style="padding: 5.5rem; text-align: center;")
+							img(src="#{dir}images/intranet/plus.svg")
+
+					.col-md-4.col-sm-12.blog-sidebar--updates(style="background-color:#f2f2f2; height:100%;")
+						.card-text(style="padding: 5.5rem; text-align: center;")
+							img(src="#{dir}images/intranet/plus.svg")
+
+					.col-md-4.col-sm-12.blog-sidebar--updates(style="background-color:#f2f2f2; height:100%;")
+						.card-text(style="padding: 5.5rem; text-align: center;")
+							img(src="#{dir}images/intranet/plus.svg")
+
+					.col-md-4.col-sm-12.blog-sidebar--updates(style="background-color:#f2f2f2; height:100%;")
+						.card-text(style="padding: 5.5rem; text-align: center;")
+							img(src="#{dir}images/intranet/plus.svg")
