--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -60,8 +60,8 @@ html.no-js
 			.navigation
 				.content
 					a.logo(href="#{dir}index.html")
-						img.wide(src="#{dir}images/ca-logo-hz-280px.svg")
-						img.slim(src="#{dir}images/ca-logo-st-220px.svg")
+						img.wide(src="#{dir}images/intranet/MyCA-logo-hz-350px.svg")
+						img.slim(src="#{dir}images/intranet/MyCA-logo-hz-350px.svg")
 
 					ul
 						li#org
