change: Adjusted the colour scheme to use yellow and blue

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -93,11 +93,11 @@
 @intranet-lightest:   		lighten(@intranet, 50%);
 */
 
-@intranet:					@inventive-teal;
-@intranet-alt:				@inventive-pink;
-@intranet-light:      		lighten(@intranet, 5%);
-@intranet-lighter:    		@inventive-teal-lighter;
-@intranet-lightest:   		@inventive-teal-lightest;
+@intranet:					@heritage-yellow;
+@intranet-alt:				@heritage-blue-lighter;
+@intranet-light:      		@heritage-yellow-lighter;
+@intranet-lighter:    		@heritage-yellow-lighter;
+@intranet-lightest:   		lighten(@heritage-yellow-lighter, 7%);
 
 /***************************************************************************
  * NAVIGATION COLOURS
