--- a/libs/modules/main-nav-beta.less
+++ b/libs/modules/main-nav-beta.less
@@ -7,7 +7,7 @@
 #main-nav-beta {
 	// Branding bar along the top, dark blue
 	.branding {
-		background-color: @intranet;
+		background-color: @heritage-blue;
 		text-align: right;
 		padding: .25rem 0;
         ul {
@@ -127,7 +127,7 @@
 				a:focus {
 					border: none;
 					background: none;
-                	color: @intranet;
+                	color: @heritage-blue;
                 	display: inline-block;
 					@media screen and (min-width: @breakpoint-sm) {
             			display: inline;
@@ -178,9 +178,9 @@
 				border-color: @intranet-light;
 			}
 	        button {
-	        	background-color: @intranet-alt;
+	        	background-color: @heritage-yellow;
 	        	border-color: @white;
-	        	color: @intranet;
+	        	color: @heritage-blue;
                 .ie(padding-bottom,.45em);
 				&:focus {
 					border-color: @intranet-light;
