add: descriptions to nav and update homepage

--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -94,45 +94,78 @@ html.no-js
 				ul
 					li
 						a(href="group.html") News and events
+						br
+						| Organisational updates and dates for your diary
 					li
 						a(href="") Team
+						br
+						| Company structure and individuals contact details
 					li
 						a(href="") Job opportunities
+						br
+						| Search roles and opportunities within Citizens Advice
 					li
 						a(href="") Policies
+						br
+						| Health and safety, Unions, your rights at work
+
 
 		#main-nav-beta--job
 			.content
 				ul
 					li
 						a(href="") External relations
+						br
+						| Contacting goverment and media
 					li
 						a(href="") Brand
+						br
+						| Brand Guidelines and resources
 					li
 						a(href="") Membership
+						br
+						| Being a Citizens Advice member
 					li
 						a(href="") Planning
+						br
+						| How to structure your Citizens Advice and create services that work
 					li
-						a(href="") Equiality
+						a(href="") Equality
+						br
+						| Guidance to help you ensure equality and diversity is covered in your business plans
 					li
 						a(href="") Client services
+						br
+						| Our promise to clients
 
 		#main-nav-beta--news
 			.content
 				ul
 					li
 						a(href="") Training
+						br
+						| Courses and sessions available
 					li
 						a(href="") Technology
+						br
+						| Software, hardware, what technology is available
 					li
 						a(href="") Support
+						br
+						| Contact details for personal and technical advice
 					li
 						a(href="") Fundraising
+						br
+						| How to raise money and apply for grants
 					li
 						a(href="") Running local offices
+						br
+						| Documentation and processes for best practice
 					li
 						a(href="") Finance
-
+						br
+						| Expenses, IPOS, procurement and budgeting
+					
 		.main-container
 			nav.main-breadcrumb
 				block breadcrumbs
