change: Updated sidebar to match new homepage content

--- a/libs/jade/dev/site/topic.jade
+++ b/libs/jade/dev/site/topic.jade
@@ -64,9 +64,8 @@ block content
 
 						button.btn.btn-secondary.right-button-icon Search roles
 				.customisable
-					button Job Opportunities
-					button.empty
-					button.empty
-					button.empty
-					button.empty
-					button.empty
+					h3 I want to...
+					a(href="#").blocklink Learn something
+					a(href="#").blocklink Find someone
+					a(href="#").blocklink Invoice something
+					a(href="#").blocklink Get help doing my job
